--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
-    <!-- css link -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+   <header>
+    <nav class="navbar">
+        <div class="container">
+           <div class="nav">
+            <div class="logo">
+                <img src="./images/icons/logo.png" alt="logo">
+               <span>idea</span>
+            </div>
+            <div class="link">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Work</a>
+                <a href="#"><img src="./images/icons/profile.png" alt=""></a>
+            </div>
+           </div>
+        </div>
+    </nav>
+   </header>
 </body>
 </html>
