--- a/index.html
+++ b/index.html
@@ -26,5 +26,29 @@
         </div>
     </nav>
    </header>
+   <!-- main section -->
+   <main>
+
+<!-- top player section -->
+
+<section class="#players">
+    <div class="container">
+       <div class="content">
+        <div class="top-player">
+            <h2 class="title">Top Player</h2>
+            <div class="players">
+                <div class="player">
+                    <img src="./images/players/player-1.png" alt="player-1">
+                    <h3 class="content-heading">John Smith</h3>
+                </div>
+            </div>
+           </div>
+       </div>
+    </div>
+</section>
+
+
+
+   </main>
 </body>
 </html>
