add player section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <link rel="shortcut icon" href="./images/fabicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -39,6 +40,26 @@
             <div class="players">
                 <div class="player">
                     <img src="./images/players/player-1.png" alt="player-1">
+                    <h3 class="content-heading">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-2.png" alt="player-1">
+                    <h3 class="content-heading">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-3.png" alt="player-1">
+                    <h3 class="content-heading">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-4.png" alt="player-1">
+                    <h3 class="content-heading">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-5.png" alt="player-1">
+                    <h3 class="content-heading">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-6.png" alt="player-1">
                     <h3 class="content-heading">John Smith</h3>
                 </div>
             </div>
