--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                     <img src="./images/players/player-6.png" alt="player-1">
                     <h3 class="content-heading">John Smith</h3>
                 </div>
+               
             </div>
+            <hr class="break">
            </div>
        </div>
     </div>
